提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1798,3 +1798,245 @@ class Solution {
 ![image-20220529140524068](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220529140524068.png)
 
 思路
+
+使用哈希表记录每一个字符串出现的次数,然后遍历target,对每一个字符在哈希表中查找其对应次数,如果哈希表中没有该字符或者出现次数为零，则返回false，否则修改哈希表中存储的次数-1；
+
+```java
+class Solution {
+        public int rearrangeCharacters(String s, String target) {
+        HashMap<Character, Integer> map = new HashMap<>();
+        boolean flag=true;
+        int ans=0;
+        for (int i = 0; i < s.length(); i++) {
+            if(!map.containsKey(s.charAt(i))){
+                map.put(s.charAt(i),1);
+            }else{
+                map.put(s.charAt(i),map.get(s.charAt(i))+1);
+            }
+        }
+        while(flag) {
+            for (int i = 0; i < target.length(); i++) {
+                if (map.containsKey(target.charAt(i)) && map.get(target.charAt(i)) > 0) {
+                    map.put(target.charAt(i), map.get(target.charAt(i)) - 1);
+                } else {
+                    flag = false;
+                }
+            }
+            if(flag){ans++;}
+        }
+        return ans;
+    }
+}
+```
+
+![image-20220529141420187](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220529141420187.png)
+
+思想:
+
+dp,dp\[i][j]表示从0,0到达i-j位置需要移除的最少障碍物,初始条件为dp\[0][0]=grid\[0][0],状态转移方程为dp\[i][j]=
+
+导师_程序设计比赛
+![image-20220530001724652](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001724652.png)
+
+![image-20220530001758484](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001758484.png)
+
+```java
+import java.util.Scanner;
+
+public class Main {
+
+        public static void main(String[] args) {
+            Scanner scanner = new Scanner(System.in);
+            int[][] arrs=new int[5][5];
+            for (int i = 0; i < 5; i++) {
+                for (int j = 0; j < 5; j++) {
+                    arrs[i][j]=scanner.nextInt();
+                }
+            }
+
+            int[] biggest = new int[5];
+            int big;
+            int small;
+            int[] smallest=new int [5];
+            for (int i=0; i < 5; i++) {
+                big = 0;
+                for (int j = 0; j < 5; j++) {
+                    if (arrs[i][j] > big) {
+                        big = arrs[i][j];
+                        biggest[i] = j;
+                    }
+                }
+            }
+            for (int i=0; i < 5; i++) {
+                small = Integer.MAX_VALUE;
+                for (int j = 0; j < 5; j++) {
+                    if (arrs[j][i] <small ) {
+                        small=arrs[j][i];
+                        smallest[i] = j;
+                    }
+                }
+            }
+            for (int i = 0; i < 5; i++) {
+                if (smallest[biggest[i]] == i) {
+                    System.out.println(i+1+" "+biggest[i]+1+" "+arrs[i][biggest[i]]);
+                }
+            }
+
+    }
+
+    } 
+```
+
+
+
+![image-20220530001820402](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001820402.png)
+
+```java
+import java.util.Scanner;
+
+public class Main {
+
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        String s1 = scanner.next();
+        String s2=scanner.next();
+        int[] int1 = new int[s1.length()];
+        int[]  int2=new int[s2.length()];
+        int big=Math.max(int1.length, int2.length);
+        int[] ans=new int[big];
+        int cur=0;
+        int pre=0;
+        int cur1=0;
+        int small= Math.min(int1.length, int2.length);
+        int p1=small-1;
+        int p2=big-1;
+        String longger=s1.length()>= s2.length()?s1:s2;
+        String shourter=longger==s1?s2:s1;
+        while(p1>=0){
+            int i = Character.getNumericValue(shourter.charAt(p1)) + Character.getNumericValue(longger.charAt(p2));
+            cur= cur1+i >=10?1:0;
+            pre= cur1+i -cur*10;
+            ans[p2]=pre;
+            p1--;
+            p2--;
+            cur1=cur;
+        }
+        while(p2>=0){
+            int j=Character.getNumericValue(longger.charAt(p2));
+            cur= cur1+j >=10?1:0;
+            pre= cur1+j -cur*10;
+            ans[p2]=pre;
+            cur1=cur;
+            p2--;
+        }
+        for (int i = 0; i < big; i++) {
+            System.out.print(ans[i]);
+        }
+    }
+}
+```
+
+![image-20220530001830668](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001830668.png)
+
+```java
+
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.LinkedList;
+import java.util.Scanner;
+
+public class Main {
+        public static void main(String[] args) {
+            Scanner scanner = new Scanner(System.in);
+            String s1 = scanner.next();
+            int l=0;
+            String s2="";
+            HashSet<Integer> set = new HashSet<>();
+            LinkedList<Integer> list = new LinkedList<Integer>();
+
+            for (int i = 0; i < s1.length(); i++) {
+                s2="";
+                if(Character.isDigit(s1.charAt(i))&&!set.contains(i)){
+                    l=i;
+                    while(Character.isDigit(s1.charAt(l))){
+                        s2+=s1.charAt(l);
+                        l++;
+                        set.add(l);
+                    }
+                    if(s2!="") {
+                        list.add(Integer.valueOf(s2));
+                    }
+                }
+            }
+            list.sort(new mycom());
+            for (int i = 0; i < list.size(); i++) {
+                if(i!=list.size()-1) {
+                    System.out.print(list.get(i) + ",");
+                }else {
+                    System.out.print(list.get(i));
+                }
+            }
+        }
+    }
+    class mycom implements Comparator<Integer> {
+        @Override
+        public int compare(Integer o1, Integer o2) {
+            return o1-o2;
+        }
+
+    }
+```
+
+![image-20220530001851918](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001851918.png)
+
+```java
+public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int L = scanner.nextInt();
+    int M=scanner.nextInt();
+    int ans=L+2;
+    for (int i = 0; i < M; i++) {
+        int start=scanner.nextInt();
+        int end=scanner.nextInt();
+        ans-=(end-start+1);
+    }
+    System.out.println(ans);
+}
+```
+
+
+
+![image-20220530001915711](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001915711.png)
+
+```java
+public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int n = scanner.nextInt();
+    int ans=0;
+    int preTime=0;
+    int price0=0;
+    int count=0;
+    for (int i = 0; i < n; i++) {
+        int type=scanner.nextInt();
+        int price=scanner.nextInt();
+        int newTime=scanner.nextInt();
+        if(type==0){
+            ans+=price;
+            price0=price;
+            count++;
+        }
+        if(type==1){
+            if(price<price0){
+                count--;
+            }
+            else {
+                ans+=price;
+            }
+        }
+        preTime=newTime;
+    }
+    System.out.println(ans);
+}
+    }
+```
+
