提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1787,11 +1787,11 @@ class Solution {
 
 ### 5.29
 
-第79场双周赛
+#### 第79场双周赛
 
 四题,难度3456
 
-第295场周赛
+#### 第295场周赛
 
 四题,难度3456
 
@@ -1835,10 +1835,7 @@ class Solution {
 
 dp,dp\[i][j]表示从0,0到达i-j位置需要移除的最少障碍物,初始条件为dp\[0][0]=grid\[0][0],状态转移方程为dp\[i][j]=
 
-导师_程序设计比赛
-![image-20220530001724652](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001724652.png)
-
-![image-20220530001758484](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001758484.png)
+#### 导师![image-20220530003104213](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530003104213.png)
 
 ```java
 import java.util.Scanner;
@@ -1889,7 +1886,7 @@ public class Main {
 
 
 
-![image-20220530001820402](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001820402.png)
+![image-20220530003038022](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530003038022.png)
 
 ```java
 import java.util.Scanner;
@@ -1936,7 +1933,9 @@ public class Main {
 }
 ```
 
-![image-20220530001830668](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001830668.png)
+![image-20220530003010139](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530003010139.png)
+
+![image-20220530002848270](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530002848270.png)
 
 ```java
 
@@ -1987,7 +1986,7 @@ public class Main {
     }
 ```
 
-![image-20220530001851918](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001851918.png)
+![image-20220530002823465](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530002823465.png)
 
 ```java
 public static void main(String[] args) {
@@ -2006,7 +2005,7 @@ public static void main(String[] args) {
 
 
 
-![image-20220530001915711](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530001915711.png)
+![image-20220530002757452](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530002757452.png)
 
 ```java
 public static void main(String[] args) {
