提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -2039,3 +2039,49 @@ public static void main(String[] args) {
     }
 ```
 
+5.30
+
+![image-20220530104107742](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220530104107742.png)
+
+每日一题
+
+```java
+public int sumRootToLeaf(TreeNode root) {
+    int ans=0;
+    backTrack(ans,root,new StringBuffer());
+    return ans;
+}
+public void backTrack(int ans ,TreeNode cur,StringBuffer str){
+    if(cur.left==null||cur.right==null){
+        if(!str.equals("")&&str.length()!=0) {
+            ans += Integer.parseInt(String.valueOf(str), 2);
+        }
+        return;
+    }
+    str.append(String.valueOf(cur.val));
+    backTrack(ans,cur.left,str);
+    str.deleteCharAt(str.indexOf(String.valueOf(cur.val)));
+    backTrack(ans,cur.right,str);
+}
+```
+
+```java
+class Solution {
+    public int sumRootToLeaf(TreeNode root) {
+        return dfs(root, 0);
+    }
+
+    public int dfs(TreeNode root, int val) {
+        if (root == null) {
+            return 0;
+        }
+        val = (val << 1) | root.val;
+        if (root.left == null && root.right == null) {
+            return val;
+        }
+        return dfs(root.left, val) + dfs(root.right, val);
+    }
+}
+
+```
+
