提交笔记修改

--- a/语言/c语言/复习.md
+++ b/语言/c语言/复习.md
@@ -1,1 +1,61 @@
-![image-20220608210212311](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220608210212311.png)
+![image-20220608210421278](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220608210421278.png)
+
+```c
+#include <stdio.h>
+#include<string.h>
+#include<stdlib.h>
+int mycmp(char*p1,char*p2) {
+    int idx = 0;
+    while (*p1 == *p2) {
+        idx++;
+    }
+    return p1[idx] - p2[idx];
+}
+int mylen(char*p){
+    int idx = 0;
+    while (*p) {
+        idx++;
+    }
+    return idx;
+}
+char * mycpy(char*p1,char*p2) {
+    char* p = p1;
+    while (*p2 != '/0') {
+        *p1++ = *p2++;
+    }
+    ++*p1 = '\0';
+    return p;
+}
+char* mycat(char* p1, char* p2) {
+    char* p = p1;
+    while (*p1) {
+        p1++;
+    }
+    while (*p2) {
+        *p1++ = *p2++;
+    }
+    *p1 = '\0';
+    return p;
+}
+char* myseconde(char* str1, char c) {
+    char* p;
+    p = strchr(str1, c);
+    p++;
+    p = strchr(p, c);
+    return p;
+}
+int main()
+{   
+    char str1[] = "hello";
+    char c = 'l';
+    char* p=myseconde(str1,c);
+    char* p2=(char*)malloc(strlen(p)+1);
+    strcpy(p2, p);
+    printf_s("%s", p2);
+    free(p2);
+}
+//安全版本 char* strncpy不管是数组形式还是指针形式，必须要有一定的空间,char*p=(char *)malloc(strlen(p2)+1);, char* strncat,int strncmp
+//字符串中查找字符 char* strchr(const char* s,char c) char*strrchr(const char* s,char c) 返回null说明未能找到字符串
+//如何找到第二个字符
+```
+
