提交笔记修改

--- a/语言/c语言/复习.md
+++ b/语言/c语言/复习.md
@@ -59,3 +59,29 @@ int main()
 //如何找到第二个字符
 ```
 
+结构体
+
+```c
+#include <stdio.h>
+struct point {
+	int x;
+	int y;
+};
+int process(struct point p) {
+	return p.x;
+}
+int process2(struct point* p2) {
+	p2->x = 1;
+	return p2->x;
+}
+int main() {
+	struct student {
+		char* name;
+		int grade;
+	}lozijy;
+	struct point p1;
+	process2(&p1);
+	return 0;
+}
+```
+
