提交笔记修改

--- a/语言/c语言/复习.md
+++ b/语言/c语言/复习.md
@@ -59,7 +59,9 @@ int main()
 //如何找到第二个字符
 ```
 
-结构体
+结构体的定义，结构体函数
+
+结构体作为函数参数会将结构体拷贝进函数中，通常使用指针作为函数参数减少空间使用。
 
 ```c
 #include <stdio.h>
@@ -84,4 +86,30 @@ int main() {
 	return 0;
 }
 ```
+
+结构体和数组很像，定义时都是采用花括号的形式，但是又有一些区别:
+
+1.p1=p2; 相当于p1.x=p2.x;p1.y=p2.y，这是数组中做不到的
+
+2.数组的变量名直接是一个指针而结构体的变量名必须取地址后才能赋给指针
+
+
+
+区别获取成员值的两种方式,一种是用struct变量直接取，一种是使用struct指针获取.
+
+```c
+struct point p;
+
+p.x;
+
+struct point *p1=&p;
+
+p->x;
+```
+
+
+
+
+
+p1=(struct point){5,10};将数组强转为struct point
 
