--- a/11月/之前/6.s081.md
+++ b/11月/之前/6.s081.md
@@ -46,9 +46,9 @@ xv6采用传统的内核形式
 
 2.系统接口
 
-![image-20221025182016524](D:\AppData\Typora\typora-user-images\image-20221025182016524.png)
+![image-20221031133814798](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221031133814798.png)
 
-![image-20221025182042344](D:\AppData\Typora\typora-user-images\image-20221025182042344.png)
+![image-20221031133838412](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221031133838412.png)
 
 ````shell
 这是open的flags的定义:
@@ -345,7 +345,7 @@ shell(本质上也是一个用户程序)调用exec是如何访问到文件系统
 
 
 
-大多数桌面操作系统都是宏内核系统,二很多嵌入式操作系统如MiniX往往是微内核设计
+大多数桌面操作系统都是宏内核系统,很多嵌入式操作系统如MiniX往往是微内核设计
 
 ### 代码:XV6架构篇
 
@@ -494,6 +494,8 @@ start()
 ```
 
 start函数在寄存器mstatus中将先前的运行模式改成管理模式，
+
+寄存器 在mstatus中将运行模式改成管理模式,将main地址写进mepc,页表寄存器satp写入0禁用虚拟内存转换
 
 riscv.h
 
