--- a/11月/之前/6.s081.md
+++ b/11月/之前/6.s081.md
@@ -880,3 +880,278 @@ mmu将虚拟地址转化为物理地址
 
 顶部9位作为顶层页表目录的索引，4096字节和页面大小一样
 
+
+
+
+
+## 第四章 RISC-V Convention and Stack Frames
+
+c->asm
+
+RISCV可以理解为指令集，每个处理器都有关联的ISA或指令，就是一套指令集，每条指令都有相关的二进制编码或操作码
+
+
+
+RISCV
+
+大多数现代计算机运行在X86上，这是一个不同的ISA，IntelCPU，AMDCpu实现了X86
+
+RISC-V指的是精简指令集，X86是复杂指令集，Intel手册里有三本书参考ISA和参考数据，新的指令依然以每个月3个的速度增加，当然还有其他精简指令集，如ARM，MAC正在向ARM指令集转型。
+
+RISCV指令集有2个文档，包括了特权指令和非特权指令,RISCV是少数的开源操作系统之一，是伯克利大学的实验室项目，这意味着任何厂商都可以为这个指令集设计电路板，Intel这么大的原因是他更注重向后的兼容性
+
+
+
+
+
+
+
+
+
+Register Convention
+
+函数在整数寄存器**a0**和**a1**以及浮点寄存器**fa0**和**fa1**中返回值。只有当浮点值是原始值（传入时**fa0**和**fa1**作为参数寄存器，原始值是指该参数不改变而直接返回）或作为仅有一两个浮点值组成的结构体的成员时，才会从浮点寄存器中返回。长度恰好为两个指针字长的其他返回值将在**a0**和**a1**中返回。较大的返回值完全在内存中传递；调用方分配此内存区域，并将指针作为隐式的第一个参数传递给被调用方。
+
+在标准的RISC-V调用约定中，栈向下增长，栈指针始终保持16字节对齐。
+
+当在堆栈上传递两倍于指针字大小的基本参数时，它们是自然对齐的。当它们在整数寄存器中传递时，它们驻留在对齐的偶数号-奇数号寄存器对中，偶数寄存器保存最低有效位。例如，在RV32中，函数`void foo(int, long long)`的第一个参数在**a0**中传递，第二个参数在**a2**和**a3**中传递。**a1**中不传递任何内容。
+
+大于指针字大小两倍的参数通过引用传递。
+
+除了自变量和返回值寄存器之外，还有在调用中不稳定的七个整数寄存器**t0**-**t6**和十二个浮点寄存器**ft0**-**ft11**作为临时寄存器，如果之后使用，调用者必须保存它们。十二个整数寄存器**s0**-**s11**和十二个浮点寄存器**fs0**-**fs11**在调用中受保护，如果使用，被调用者必须保存它们。表18.2显示了调用约定中每个整数和浮点寄存器的作用。
+
+
+
+
+
+![image-20221103003741138](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103003741138.png)
+
+
+
+![image-20221103003757263](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103003757263.png)
+
+the stack 
+
+stack frame 栈帧，每当我们调用一个函数函数，函数就会创造一个栈帧，并通过移动栈指针(sp)来使用它，
+
+对于栈，我们从高地址开始，然后向下拓展到低地址
+
+函数栈帧包括寄存器，局部变量，如果参数寄存器用完了，额外的参数就会出现在栈上，栈帧不一定是相同大小。返回地址总在第一个，两个重要的寄存器，SP，在栈的底部，也就是栈的位置，fp指向当前帧的底部，这很重要，意味着返回地址和前一fp将始终位于当前帧指针的固定位置，我们之所以存储前一个帧指针，是为了可以向后跳转，一旦这个函数调用，我们可以把它移动到fp，然后fp从指向上一个栈帧到指向这一个栈帧。 
+
+![image-20221103102426385](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103102426385.png)
+
+## 第四章陷阱指令和系统调用
+
+
+
+
+
+
+
+
+
+有三种事件会导致中央处理器搁置普通指令的执行，并强制将控制权转移到处理该事件的特殊代码上。一种情况是系统调用，当用户程序执行`ecall`指令要求内核为其做些什么时；另一种情况是异常：（用户或内核）指令做了一些非法的事情，例如除以零或使用无效的虚拟地址；第三种情况是设备中断，一个设备，例如当磁盘硬件完成读或写请求时，向系统表明它需要被关注。
+
+本书使用陷阱（trap）作为这些情况的通用术语。通常，陷阱发生时正在执行的任何代码都需要稍后恢复，并且不需要意识到发生了任何特殊的事情。也就是说，我们经常希望陷阱是透明的；这对于中断尤其重要，中断代码通常难以预料。通常的顺序是陷阱强制将控制权转移到内核；内核保存寄存器和其他状态，以便可以恢复执行；内核执行适当的处理程序代码（例如，系统调用接口或设备驱动程序）；内核恢复保存的状态并从陷阱中返回；原始代码从它停止的地方恢复。
+
+xv6内核处理所有陷阱。这对于系统调用来说是顺理成章的。由于隔离性要求用户进程不直接使用设备，而且只有内核具有设备处理所需的状态，因而对中断也是有意义的。因为xv6通过杀死违规程序来响应用户空间中的所有异常，它也对异常有意义。
+
+Xv6陷阱处理分为四个阶段： RISC-V CPU采取的硬件操作、为内核C代码执行而准备的汇编程序集“向量”、决定如何处理陷阱的C陷阱处理程序以及系统调用或设备驱动程序服务例程。虽然三种陷阱类型之间的共性表明内核可以用一个代码路径处理所有陷阱，但对于三种不同的情况：来自用户空间的陷阱、来自内核空间的陷阱和定时器中断，分别使用单独的程序集向量和C陷阱处理程序更加方便。
+
+
+
+## 环境配置
+
+1.
+
+```shell
+sudo apt-get install git build-essential gdb-multiarch qemu-system-misc gcc-riscv64-linux-gnu binutils-riscv64-linux-gnu 
+```
+
+c/c++编译工具集，riscv64架构的gnu工具集,qemu工具集，git,适用于riscv架构的gdb调试工具
+
+2.下载Xv6的git仓库,注意不要下载Xv6的官方源码，而是要下载课程改动过的源码
+
+```shell
+git clone git://g.csail.mit.edu/xv6-labs-2021
+
+```
+
+3.进入文件夹输入以下内容:
+
+```shell
+git checkout util
+make qemu
+```
+
+### 配置ubuntu的ssh服务器
+
+输入sudo su进入root用户模式，然后输入passwd为root用户设置一个密码。
+
+输入ls /etc/ssh命令查看是否有sshd_config这个文件，如果没有则输入apt-get install openssh-server下载。
+
+将sshd_config中的PermitRootLogin的#号去掉，并将值改为yes。
+
+输入service ssh restart重启ssh服务。（如果没设置开机自动启动，那么每次开机都要重启ssh服务）
+```shell
+删除,重装ssh
+$ sudo apt-get remove --purge openssh-server
+$ sudo apt-get update
+$ sudo apt-get install openssh-server
+```
+
+### 在clion上连接虚拟机
+
+![image-20221103132403433](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132403433.png)
+
+![image-20221103132412496](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132412496.png)
+
+![image-20221103132445217](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132445217.png)
+
+![image-20221103132546715](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132546715.png)
+
+![image-20221103132607147](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132607147.png)
+
+![image-20221103132734841](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132734841.png)
+
+![image-20221103132744094](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132744094.png)
+
+把debugger改成multiarch因为原始gdb无法识别riscv的指令集
+
+![image-20221103132906540](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103132906540.png)
+
+### 配置部署服务器
+
+点击上方**工具**，选择**部署**，点击**配置**，填好映射路径。
+
+![image-20221103133841592](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103133841592.png)
+
+然后依次点**工具**、**部署**、**浏览远程主机**，就可以管理虚拟机的文件了，在这里可以很方便的直接管理虚拟机文件。
+
+删除项目内初始的文件（如果有的话），右键项目文件夹，点击部署，然后下载虚拟机里的文件。
+
+
+
+配置Makefile项目
+打开设置，将构建目标设置为qemu-gdb。
+
+*如果设置里显示未检测到Makefile项目就删掉项目文件夹里的.idea*文件夹，然后重新打开项目。**之前的设置会被初始化，需要重新设置一下。
+
+设置完了之后打开Makefile文件，点右上角按钮重新加载项目。
+
+![image-20221103135937314](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221103135937314.png)
+
+此时索引就建立完毕了，可以自动补全和ctrl+B来快速跳转了。
+
+### 添加调试配置
+
+在右上角打开**运行/调试配置**，添加一个**远程调试**的配置。
+
+![image-20220329124021990](https://img-blog.csdnimg.cn/img_convert/3267d2e938cceb2f1496baae815d85e9.png)
+
+课程内的gdb服务器默认使用*25000*端口。
+
+执行`make`后会对内核程序和和每个用户程序各生成一个符号文件，内核的符号文件就叫*kernel*，用户程序的符号文件为_{程序名}，例如ls的符号文件为*_ls*。
+
+
+
+设置.gdbinit
+在*/root文件夹下创建一个名为.gdbinit*的文件
+
+向里面填入如下内容
+
+```shell
+set confirm off
+set architecture riscv:rv64
+file kernel/kernel
+add-symbol-file user/_ls
+set disassemble-next-line auto
+set riscv use-compressed-breakpoints yes
+```
+
+这里是调试ls，如果要调试自己写的程序，比如说myproc，就添加一行add-symbol-file user/_myproc。
+### 启动调试服务器
+
+在虚拟机的Xv6文件夹下输入`make qemu-gdb`来启动gdb服务器，如遇到错误可以尝试`make clean`来清除之前make生成的文件，shell输出以下内容即为开启成功。
+
+```shell
+*** Now run 'gdb' in another window.
+qemu-system-riscv64 -machine virt -bios none -kernel kernel/kernel -m 128M -smp 3 -nographic -drive file=fs.img,if=none,format=raw,id=x0 -device virtio-blk-device,drive=x0,bus=virtio-mmio-bus.0 -S -gdb tcp::25000
+```
+
+如果显示25000端口已被占用或者文件fs.img被占用，应该是上一次运行没有正确退出，请自行百度查找如何根据占用端口或者文件获取pid，然后kill掉，这里建议使用lsof。
+
+apt-get install lsof安装lsof。
+lsof fs.img和lsof -i:25000查询进程。
+
+### 开始调试
+
+点击CLion右上角调试按钮开始调试ls程序，下方会显示连接成功，然后回到shell会发现可以输入命令了，此时我输入`ls grep`，成功触发断点。
+
+![image-20220329131621170](https://img-blog.csdnimg.cn/img_convert/c591e5329c4bd34062c47fb0f279a6a0.png)
+
+### xv6和clion相关
+
+Xv6没有实现ps程序，要列出当前进程可以在Xv6的终端里中输入ctrl+p，关闭Xv6先按ctrl+a再按x。
+调试Xv6时发生读取空指针，缓冲区溢出等错误时CLion不会报错，但是会导致调试异常，当系统中断，跳转到spinlock.c等文件内时需要格外注意。
+在CLion内可以用ctrl+alt+h来查看一个函数被哪些函数调用了。
+
+
+
+
+
+## 使用GDB进行调试
+
+配置RISCV-GNU-toolchain
+
+RISC-V架构下利用QEMU进行GDB调优
+
+
+
+使用GNUDebugger
+
+- 带有GDB：运行`make qemu[-nox]-gdb`，然后在第二个Shell中启动GDB（`iscv64-linux-gnu-gdb`）
+
+- 如果以单核方式启动，则使用`make CPUS=1 qemu-gdb`
+
+- 不带有GDB：当不需要GDB时使用`make qemu[-nox]`命令
+
+- `step`一次运行一行代码。当有函数调用时，它将步进到被调用的对象函数。
+
+- `next`也是一次运行一行代码。但当有函数调用时，它不会进入该函数。
+
+- `stepi`和`nexti`对于汇编指令是单步调试。
+
+- `continue`运行代码，直到遇到断点或使用`<Ctrl-c>`中断它
+
+- `finish`运行代码，直到当前函数返回
+
+- `advance <location>`运行代码，直到指令指针到达指定位置
+
+- `break <location>`在指定的位置设置断点。 位置可以是内存地址(`*0x7c00`)或名称(`monbacktrace`，`monitor.c:71`)
+
+- 如需修改断点请使用`delete`，`disable`，`enable`
+
+- `x`以您指定格式（`x/x`表示十六进制，`x/i`表示汇编，等等）打印内存的原始内容。
+
+- `print`计算一个C表达式并将结果以合适的类型打印。它通常比`x`更有用
+
+- 使用`p *((struct elfhdr *) 0x10000)`的输出比`x/13x 0x10000`的输出好得多
+
+- `info registers`打印每个寄存器的值
+
+- `info frame`打印当前栈帧
+
+- `list <location>`在指定位置打印函数的源代码
+
+- `backtrace`或许对于你的lab1中的工作很有用处
+
+- GDB有一个文本用户界面，在curses用户界面中显示有用的信息，如代码列表、反汇编和寄存器内容
+
+  - `layout <name>`切换到给定的用户界面
+
+  例如`layout split`，效果如下
+
+  `layout asm`：查看汇编 `layout reg`：查看寄存器 `info reg`：查看寄存器 `b *0x1234`：在指定地址设定断点
+
+  `Ctrl+a c`：进入控制模式 `info mem`：打印页表
