--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -74,7 +74,7 @@ mock
 
 slap
 
-loom
+loom the black clouds looming on the horizon indicated a thunderstorm
 
 napkin
 
@@ -88,7 +88,7 @@ intensive 集中的
 
 cult 狂热，邪教
 
-rot
+rot the wood must not get damp as rot can quickly result
 
 overlook
 
@@ -152,7 +152,7 @@ cliff the castle was built on the top of a vertical cliff
 
 sample
 
-versatile
+versatile he's a versatile actor
 
 pessimistic
 
@@ -966,9 +966,87 @@ supplementary take supplementary vitamins
 
 
 
-
-
 #### 星火
+
+mastery
+
+pastime
+
+pathetic
+
+patriotic his patriotic action raised our admiration
+
+patrol  an enemy patrol
+
+ponder
+
+perpetual
+
+pervasive
+
+precede
+
+preclude
+
+predecessor
+
+preside 
+
+prestige
+
+radiant 
+
+resignation
+
+subsidy
+
+sizable
+
+shrewd 
+
+setback
+
+seniority
+
+stockholder
+
+specification
+
+speculative
+
+symmetrical
+
+trivial
+
+turbulent
+
+unfold
+
+uphold
+
+warehouse
+
+vicinity it affected several cities in the vicinity
+
+budget 
+
+acute
+
+considerate
+
+crash
+
+routine
+
+transaction the transaction gets rejected
+
+virtually the twins are virtually identical
+
+anticipate none can anticipate the result
+
+compensation  she is still press her claim for compensation
+
+claim she claims to have uncovered how people achieve success
 
 #### 阅读
 
