--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -14,17 +14,17 @@ diligent
 
 blunder
 
-meteorite 流星
+meteorite meteorites that have landed on Earth
 
 odor
 
-prospect
+prospect bright prospect of commuter science
 
 tow
 
 squad
 
-preliminary
+preliminary preliminary results confirmed the scientist's prediction
 
 straightforward
 
@@ -34,11 +34,11 @@ stabilize
 
 siege besiege
 
-hose
+hose  wash the car with garden hose
 
-relay
+relay he relayed the message to his boss
 
-instrument
+instrument instrument of torture
 
 kin
 
@@ -46,15 +46,15 @@ doom
 
 ironically
 
-mansion
+mansion the family owns a great mansion
 
-compromise
+compromise in relationship,you have to make compromise
 
 dictate
 
 urge
 
-spectator
+spectator the festival attract 87000 spectators
 
 rape
 
@@ -72,31 +72,31 @@ tribute
 
 mock
 
-slap
+slap he slapped me on the back
 
 loom the black clouds looming on the horizon indicated a thunderstorm
 
 napkin
 
-indicative 表示
+indicative  the cat is indicative of their lack of  interest
 
-crew
+crew none of the passengers and crew were injured
 
 spice
 
-intensive 集中的
+intensive two weeks of intensive training
 
 cult 狂热，邪教
 
 rot the wood must not get damp as rot can quickly result
 
-overlook
+overlook curiosity is a much-overlooked human virtue
 
-instance
+instance several instances of juvenile delinquency
 
-device
+device device a method to improve
 
-shrink
+shrink the tumour had shrunk to the size of a pea
 
 dilute
 
@@ -118,7 +118,7 @@ exquisite
 
 intelligible 可理解的
 
-thrive
+thrive companies thrive in the area
 
 slippery
 
@@ -128,7 +128,7 @@ enroll
 
 flat
 
-batch
+batch batches of graduates flood into the job market
 
 slack
 
@@ -164,7 +164,7 @@ inevitably
 
 consequent  there is always confusion consequent to an earthquake
 
-cosmonaut
+cosmonaut Cosmonaut Yuri
 
 disorder
 
@@ -176,9 +176,9 @@ span life span
 
 transport transport policy
 
-delicate
+delicate eye is the most delicate organ
 
-extinguish
+extinguish firefighters tried to extinguish the flames
 
 cucumber peel the cucumber and chop it into small cubes
 
@@ -196,7 +196,7 @@ hail his father hailed from Italy
 
 commission he commissioned a statue of his wife
 
-devote
+devote devote most of the time
 
 immerse he immersed himself in his work
 
@@ -212,7 +212,7 @@ escort
 
 millionaire his father is a millionaire businessman
 
-drastically
+drastically the budget has been drastically reduced
 
 reap to reap I don't sow
 
@@ -338,7 +338,7 @@ infusion An infusion of new capital(资本) into the company
 
 tedious
 
-composite
+composite a composite of information
 
 pope The **pope** Roman pontiff**(*Romanus pontifex*) or **sovereign pontiff**, is the **bishop of Rome(or historically the **patriarch of Rome**, head of the worldwide Catholic Church, and has also served as the head of states and later the Vatican City State since the eighth century
 
@@ -632,7 +632,7 @@ Perceived quality is the consumer’s overall dedication and satisfaction with a
 
 
 
-### 第二天
+### 第二天11.18
 
 #### 复习
 
@@ -970,49 +970,49 @@ supplementary take supplementary vitamins
 
 mastery
 
-pastime
+pastime Mahjong is the city's most popular pastime
 
-pathetic
+pathetic lonely and pathetic women
 
 patriotic his patriotic action raised our admiration
 
 patrol  an enemy patrol
 
-ponder
+ponder he pondered for some minutes
 
-perpetual
+perpetual 
 
-pervasive
+pervasive  pervasive influence on people
 
-precede
+precede  precede his lecture with a humorous story
 
-preclude
+preclude   the contract preclude him form disclosing any confidential
 
-predecessor
+predecessor younger than his predecessor
 
 preside 
 
-prestige
+prestige national prestige in the world
 
-radiant 
+radiant  
 
-resignation
+resignation hand over my  resignation letter
 
-subsidy
+subsidy government subsidy
 
 sizable
 
-shrewd 
+shrewd the shrewd businessman 
 
-setback
+setback 
 
-seniority
+seniority chosen by seniority
 
-stockholder
+stockholder 
 
-specification
+specification built exactly to our specification
 
-speculative
+speculative the report was dismissed as highly speculative
 
 symmetrical
 
@@ -1022,7 +1022,7 @@ turbulent
 
 unfold
 
-uphold
+uphold uphold the law
 
 warehouse
 
@@ -1052,22 +1052,174 @@ claim she claims to have uncovered how people achieve success
 
 #### 翻译
 
-### 第三天
+### 第三天11.20
+
+#### 复习
+
+disregard
+
+recall
+
+justify
+
+molten
+
+commic
+
+holder the record holder
+
+prospect bright prospect of commuter science
+
+hose  wash the car with garden hose
+
+preliminary preliminary results confirmed the scientist's prediction
+
+delicate eye is the most delicate organ
+
+permissible it's not permissible to park the car here
+
+mansion the family owns a great mansion
+
+pitch It's possible to drive in a matter of minutes from sleek office towers near the airport where people pitch ideas to investors,to single-family homes with orange trees in their yards.
+
+oil,mineral pitch and many forest products
+
+stagger stagger across the room
+
+device device a method to improve
+
+doctrine antigovernment doctrine
+
+cosmonaut Cosmonaut Yuri
+
+retrospect in retrospect he was a carefree boy
+
+supple keep herself supple
+
+perish perished in the hotel fire
+
+quench fireman tried to quench the flames
+
+traverse The region is traversed by several roads
+
+latitude the latitude of the island is 30 degrees north
+
+immigrant  a rise in the number of immigrants
+
+relay he relayed the message to his boss
+
+pearl a necklace made of pearls
+
+warfare the dispute could develop into open warfare
+
+universe the parallel universe
+
+yield if you yield to someone,you stop resisting them ,hard work yields good results
+
+slip my foot slipped and I fell
+
+intensive two weeks of intensive training
+
+spectator the festival attract 87000 spectators
+
+crew none of the passengers and crew were injured
+
+ voilate the international trade agreement
+
+slap he slapped me on the back
+
+doubtless he would doubtless disapprove of what he said
+
+compromise in relationship,you have to make compromise
+
+proficient I'm quite proficient at teaching
+
+instance several instances of juvenile delinquency
+
+instruct instruct him to report
+
+cliff the castle was built on the top of a vertical cliff
+
+composite a composite of information
+
+indicative  the cat is indicative of their lack of  interest
+
+erosion the erosion of the soil is damaging the forest
+
+commodity its exports to commodity
+
+decay no decay in her teeth
+
+sheer if sheer numbers provide any proof,America's universitied are the envy of the world .the area is under threat from the sheer number of tourists using it.
+
+downfall the scandal downfall him
+
+guardian the child 's guardians must give their consent before she has the operation.
+
+devote devote most of the time
+
+premier The small island is one of the country's premier holiday destinations
+
+instrument instrument of torture
+
+dispatch Troops have been dispatched to the area
+
+reciprocal reciprocal agreement with the company
+
+thrive companies thrive in the area
+
+hysterical the singer was welcomed by a crowd of hysterical screaming fans
+
+provision the law makes no provision for this 
+
+partition hear him through the partition
+
+wrinkle get wrinkles around her eyes
+
+reside this family has resided in this city for 60 years
+
+reclaim go to the police station to reclaim your wallet
+
+batch batches of graduates flood into the job market
+
+compact compact package
+
+commission  he commission a statue of his wife
+
+idiom the local idiom
+
+hail hailed from Italy
+
+incentive an incentive in training pet dogs
+
+cast the setting sun cast an orange glow over the mountains
+
+depression loneliness was linked to depression
+
+withdraw be forced to withdraw
+
+infusion An infusion of new capital into the company is required
+
+
+
+#### 扇贝
+
+
 
 ### 第四天 
 
-### 第五天
+### 第五天11.22
 
 ### 第六天
 
-### 第七天
+### 第七天11.24
 
-### 第八天
+### 第八天11.25
 
 ### 第九天
 
-### 第十天
+### 第十天11.27
 
 ### 第十一天
 
-### 第十二天
+### 第十二天11.29
