--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -1204,6 +1204,270 @@ infusion An infusion of new capital into the company is required
 
 #### 扇贝
 
+gaze gaze out of the window
+
+retain retain it‘s population
+
+exceptional exceptional memory
+
+hierarchy 
+
+intrigue intrigued by the employee's idea .  intriguing changes
+
+barrier trade barriers
+
+vital vital role 
+
+conserve conserve water
+
+tile tile walls and floors
+
+compel
+
+remnant the remnant of last night's meal
+
+duke the king gave the duke 1000 hectares of land
+
+poetry
+
+expression an expression of support
+
+seemingly seemingly impossible task
+
+standing considerable standing
+
+pricacy
+
+evil an evil man
+
+reserve reserve a seat for me 
+
+sake for the sake of her children
+
+deed heroic deeds
+
+facilitate facilitate the economic growth
+
+sip
+
+pledge pledge never to tell the secret
+
+innovative innovative writer
+
+banquet a grant banquet and a formal dance
+
+domain political domain
+
+substance the substance that causing the problem
+
+inaccessible
+
+enslave the children'd been enslaved
+
+nominal the nominal head of our college
+
+military military force
+
+crush crushed under the truck
+
+cocktail sip cocktail
+
+haunt the memory haunt me
+
+specialist  a cancer specialist
+
+transistor
+
+hemisphere
+
+rivalry rivalry between brothers
+
+commemorate commemorate the poet
+
+infrastructure transport infrastructure
+
+preferable preferable to war
+
+virtual virtual machine  . a virtual acceptance of the bill
+
+occupation 1000 occupations
+
+quaint a quaint old water town
+
+slope a steep slope
+
+bargain a bargain at that price
+
+bulk a bulk of goods
+
+protest protest against the decision
+
+tribe a tribe of Indians
+
+velvet  I tap the base of the feather onto the velvet
+
+resolve resolve the problems. are resolved to give the slum access
+
+suspension  players are appealing against their suspensions
+
+merit  without merit
+
+decree ruled by decree
+
+flare the fire flared
+
+sustain sustain life
+
+conference the hotel is used for exhibitions and conferences
+
+periodic periodic checks
+
+pathetic pathetic women
+
+benign benign smile
+
+burial bodies were taken home for burial
+
+emphasize
+
+readily readily agree
+
+levy 3% levy in alcohol
+
+staple staple ingredient of comedy
+
+proficiency proficiency as a surgeon
+
+instinct natural instinct
+
+verse a pen write a verse of me and you 
+
+region coastal region
+
+endow nature endow her with a brain
+
+psychiatrist  psychiatrist examining the mental
+
+dismiss
+
+beforehand
+
+reel a fishing reel
+
+emergence his emergence as a leader
+
+soluble salt is soluble
+
+institute research institute
+
+stark looked stark
+
+metallic harsh and metallic
+
+faculty "language faculty". where faculty regularly decide on their textbook
+
+redundant redundant words
+
+decisive  decisive action
+
+handbook tourist handbook
+
+syndrome irritable bowel syndrome
+
+ideology political ideology
+
+inherent 
+
+catastrophe prevent another catastrophe
+
+blunt blunt knife
+
+gigantic earth is a gigantic magnet
+
+tariff imposes tariffs on imports
+
+misery
+
+embark embark on a adventure
+
+comparison on the comparison of the two styles
+
+plate sandwiches on a plate
+
+classic classic music 
+
+heap heaps of homework
+
+flatter fell flattered at being asked to give a lecture
+
+reform proposals to reform the social system
+
+retort retort that it is nonsense
+
+sacred a sacred image
+
+disastrous
+
+obscene
+
+slaughter
+
+consumption
+
+brisk
+
+proclaim
+
+shrug
+
+resultant resultant loss of life
+
+infectious infectious disease
+
+flap flap its wings and flew away
+
+proposition
+
+militant groups of militants
+
+complicated
+
+voluntary
+
+revel reveled in his success
+
+drainage look at the drainage
+
+radius six-mile radius
+
+discrimination
+
+hawk
+
+elicit elicit information
+
+lame lame in the right leg
+
+priority
+
+skeleton
+
+grief
+
+respective respective roles
+
+expel expeled from school
+
+propagate propagate their ideas
+
+diagnosis an exact diagnosis
+
+scatter scattered on the floor
+
+quiver
+
+perspiration wipe the perspiration
+
 
 
 ### 第四天 
